--- a/packaging/redhat/autosignr.service
+++ b/packaging/redhat/autosignr.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Autosignr Puppet Cert Signer
+After=basic.target network.target
 
 [Service]
 ExecStart=/usr/sbin/autosignr /etc/autosignr/config.yaml
